# Main_MiSTeX

./: .gitignore  CMakeLists.txt  DiskImage.cpp  Makefile  Makefile.aarch64  Makefile.arm  Makefile.arm64  Makefile.riscv  MiSTer.ini  README.md  bootcore.cpp  cfg.cpp  cfg.h  file_io.cpp  fpga_io.cpp  fpga_io.h  input.cpp  main.cpp  menu.cpp  scheduler.h  shmem.cpp  smbus.cpp  spi.cpp  spi.h  user_io.cpp  user_io.h  video.cpp
support/arcade/: mra_loader.cpp
support/neogeo/: neogeo_loader.cpp
support/snes/: snes.cpp
